--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "axios": "^0.19.0",
+    "indefinite-observable": "^2.0.1",
+    "mdbreact": "^4.18.1",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-confirm-alert": "^2.4.1",
+    "react-data-components": "^1.2.0",
+    "react-redux": "^7.1.0",
+    "react-select": "^3.0.4",
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.14",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
