--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
     "axios": "^0.19.0",
     "indefinite-observable": "^2.0.1",
+    "match-sorter": "^4.0.2",
     "mdbreact": "^4.18.1",
+    "namor": "^1.1.3",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-confirm-alert": "^2.4.1",
     "react-data-components": "^1.2.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
+    "react-table": "^6.10.3",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
