--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "namor": "^1.1.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-chartjs-2": "^2.8.0",
     "react-confirm-alert": "^2.4.1",
     "react-data-components": "^1.2.0",
     "react-dom": "^16.9.0",
