--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "indefinite-observable": "^2.0.1",
     "match-sorter": "^4.0.2",
     "mdbreact": "^4.18.1",
+    "moment": "^2.24.0",
     "namor": "^1.1.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.9",
