--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "match-sorter": "^4.0.2",
     "mdbreact": "^4.22.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "namor": "^1.1.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
