--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "indefinite-observable": "^2.0.1",
     "match-sorter": "^4.0.2",
-    "mdbreact": "^4.22.1",
+    "mdbreact": "^4.25.4",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.28",
     "namor": "^1.1.3",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.8.0",
-    "react-confirm-alert": "^2.4.1",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-chartjs-2": "^2.9.0",
+    "react-confirm-alert": "^2.6.1",
     "react-data-components": "^1.2.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
-    "react-table": "^6.10.3",
-    "reactstrap": "^8.1.1",
-    "redux": "^4.0.1",
+    "react-table": "^6.11.5",
+    "react-to-print": "^2.6.3",
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14",
